# creative-drawing-board

./: .gitignore  README.md  SPEC.md  index.html  manifest.json  mcp-server.js  package-lock.json  package.json  sw.js  vite.config.js  vitest.config.js
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: mcp-server.test.js
